<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.GameOfflineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPlayOnline"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPlayerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_player_1_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="3">

            <CheckBox
                android:id="@+id/cbPlayer1x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="@string/main_x"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbPlayer1o"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="@string/main_o"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtPlayerTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/main_player_2_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3">

            <CheckBox
                android:id="@+id/cbPlayer2x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="@string/main_x"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbPlayer2o"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="@string/main_o"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cbSinglePlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/main_single_player" />

                <CheckBox
                    android:id="@+id/cbTwoPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/main_two_player" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spDifficulty"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:hint="@string/main_spinner_difficulty" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ic_round_8"
        android:paddingHorizontal="60dp"
        android:text="@string/main_start"
        android:textColor="@android:color/white" />

</RelativeLayout>

