<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.offline.StartOfflineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight=".6"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2.1">

            <TextView
                android:id="@+id/tvPlayerOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/content_player_1"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/tvPlayerTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/content_player_2"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="22sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:weightSum="2.1">

            <TextView
                android:id="@+id/tvPlayer1Score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/content_0"
                android:textSize="55sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/tvPlayer2Score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/content_0"
                android:textSize="55sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivZz"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:importantForAccessibility="no"
                android:padding="15dp"
                tools:src="@android:drawable/ic_delete" />

            <View
                android:layout_width="@dimen/line_thickness"
                android:layout_height="match_parent"
                android:background="@color/lineColor" />

            <ImageView
                android:id="@+id/ivZo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                tools:ignore="ContentDescription"
                tools:src="@android:drawable/presence_online" />

            <View
                android:layout_width="@dimen/line_thickness"
                android:layout_height="match_parent"
                android:background="@color/lineColor" />

            <ImageView
                android:id="@+id/ivZt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                tools:ignore="ContentDescription"
                tools:src="@android:drawable/ic_delete" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_thickness"
            android:background="@color/lineColor" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivOz"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                tools:ignore="ContentDescription"
                tools:src="@android:drawable/ic_delete" />

            <View
                android:layout_width="@dimen/line_thickness"
                android:layout_height="match_parent"
                android:background="@color/lineColor" />

            <ImageView
                android:id="@+id/ivOo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_tic_tac_toe_o" />

            <View
                android:layout_width="@dimen/line_thickness"
                android:layout_height="match_parent"
                android:background="@color/lineColor" />

            <ImageView
                android:id="@+id/ivOt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                tools:ignore="ContentDescription"
                tools:src="@android:drawable/ic_delete" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_thickness"
            android:background="@color/lineColor" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivTz"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                tools:ignore="ContentDescription"
                tools:src="@android:drawable/presence_online" />

            <View
                android:layout_width="@dimen/line_thickness"
                android:layout_height="match_parent"
                android:background="@color/lineColor" />

            <ImageView
                android:id="@+id/ivTo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_tic_tac_toe_x" />

            <View
                android:layout_width="@dimen/line_thickness"
                android:layout_height="match_parent"
                android:background="@color/lineColor" />

            <ImageView
                android:id="@+id/ivTt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                tools:ignore="ContentDescription"
                tools:src="@android:drawable/presence_online" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvTurn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:fontFamily="monospace"
            android:textColor="@android:color/holo_green_dark"
            tools:text="turn" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:text="@string/content_game"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/tvGameNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/content_1"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
